# raytracer-rs

./: Cargo.toml
benches/: bench_main.rs  raytracing.rs
examples/: demo.rs  mesh.rs  ply_mesh.rs  trans.rs
src/: camera.rs  color.rs  error.rs  geo.rs  lib.rs  ply.rs  ray.rs  scene.rs  util.rs
src/light/: directional.rs  mod.rs  point.rs
src/material/: checker.rs  mod.rs  texture.rs
src/math/: matrix.rs  mod.rs  point.rs  transform.rs  vector.rs
src/shape/: cube.rs  mesh.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
