[package]
name = "raytracer-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = "0.3.0"
image = "0.23"
indicatif = {version = "0.16", features = ["rayon"]}
nom = "6"
ply-rs = "0.1"
rayon = "1.5.1"

[dev-dependencies]
criterion = "0.3"
proptest = "1.0.0"

[[bench]]
name = "bench_main"
harness = false
